tests/invalid/invalid_tagged_enum_literal.ri
enum TaggedEnum {
    Valid,
    Invalid(int)
}

func main() {
    _ = TaggedEnum.Valid;
    _ = TaggedEnum.Invalid;
}
